Update WeatherService.java